Add change-product-column-type migration

--- a/.gitignore
+++ b/.gitignore
@@ -167,4 +167,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# temp folder
+src/models
+models
+
 # End of https://www.toptal.com/developers/gitignore/api/node,windows
