--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,5 +98,14 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "config/config.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
