--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "generate:migration": "npx sequelize-cli migration:generate --name",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "generate:seeder": "npx sequelize-cli seed:generate --name",
+    "seed": "npx sequelize-cli db:seed --seed",
+    "seed:all": "npx sequelize-cli db:seed:all",
+    "seed:undo": "npx sequelize-cli db:seed:undo",
+    "seed:undo:all": "npx sequelize-cli db:seed:undo:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
